# visualizer

./: .gitignore  CMakeLists.txt  README.md  audio_test.cpp  buffer.cpp  buffer.h  choreography.json  choreography.txt  conanfile.txt  cube.cpp  cube.h  destination.cpp  destination.h  plot.py  program.cpp  program.h  shader.cpp  test.cpp  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  visualizer.cpp  visualizer0.cpp  visualizer2.cpp
engine/: CMakeLists.txt  audio.cpp  audio.h  buffer.cpp  buffer.h  destination.cpp  destination.h  framebuffer.cpp  framebuffer.h  program.cpp  program.h  quad.cpp  quad.h  renderbuffer.cpp  renderbuffer.h  shader.h  texture.cpp  texture.h  vertexarray.cpp  wave.cpp  wave.h
shader/: CMakeLists.txt  convert_shader.cmake  fragment.glsl  scene_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl  vertex.glsl
visualizer/: CMakeLists.txt  action.cpp  action.h  batch.cpp  batch.h  blur.frag  blur.vert  collection.cpp  collection.h  object.h  parameter.cpp  parameter.h  parameters.cpp  parameters.h  postprocessing.cpp  postprocessing.h  ring.cpp  ring.h  scene.cpp  scene.frag  scene.h  scene.vert  screen.frag  screen.vert  shape.cpp  shape.h  transform.cpp  transform.h  transition.cpp  transition.h  visualizer.cpp
